--- a/web/src/pages/TeacherForm/styles.css
+++ b/web/src/pages/TeacherForm/styles.css
@@ -22,7 +22,7 @@
     padding: 0 2.4rem;
 }
 
-#page-teacher-form main fieldset+fieldset {
+#page-teacher-form main fieldset + fieldset {
     margin-top: 6.4rem;
 }
 
@@ -30,7 +30,10 @@
     font: 700 2.4rem Archivo;
     color: var(--color-text-title);
     margin-bottom: 2.4rem;
-    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
     padding-bottom: 1.6rem;
     border-bottom: 1px solid var(--color-line-in-white);
 }
